--- a/aboutus.html
+++ b/aboutus.html
@@ -1,60 +1,49 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scarlet Raimsy Clothing | About Us</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header -->
     <header>
         <h1>Scarlet Raimsy Clothing</h1>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About Us</a> |
-            <a href="services.html">Services</a> |
-            <a href="customization.html">Customization</a> |
-            <a href="blog.html">Blog</a> |
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="customization.html">Customization</a>
+            <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
-    <!-- About Us Content -->
-    <section>
+    <section class="about">
         <h2>About Us</h2>
-        <p><strong>Business History:</strong>  Scarlet Raimsy Clothing’s was Established in 2019 after a survey about women’s clothing that was conducted 
-in august in honour of women’s month.
- Scarlet Raimsy Clothing’s focuses on empowering women to express individuality by customizing outfits to their body type, preferences, and occasions.
-Our team believes every woman deserves to wear clothing that fits her body and personality perfectly.</p>
-<h2>Mission</h2>
-<p> To create quality clothes that will make women comfortable and happy, and 
-custom-fit clothing that celebrates every woman’s unique style. </p>
-<h2>Founder/CEO</h2>
-<p> The founder of this business is Scarlet Buthelezi.</p>
-    <img src="founder.jpg" width="20%" length="20%"
-    <br>
-       <p>Personal Message: YOU DESERVE TO SHINE MY DARLINGS, DO SO BY FEELING COMFORTABLE IN YOUR SKIN.....LOVE IS AMONGST US WOMEN.</p> 
+        <p><strong>Business History:</strong> Scarlet Raimsy Clothing was established in 2019 after a survey about women’s clothing conducted in August in honour of Women’s Month. We focus on empowering women to express individuality by customizing outfits to their body type, preferences, and occasions.</p>
 
-        <h2>Store Details:</h2>
-             Our boutique is located in Johannesburg, South Africa. The full address is below. 
+        <h2>Mission</h2>
+        <p>To create quality clothes that make women comfortable and happy, and custom-fit clothing that celebrates every woman’s unique style.</p>
 
-             We offer in-store consultations and an online ordering platform for your convenience.</p>
+        <h2>Founder / CEO</h2>
+        <p>The founder of this business is Scarlet Buthelezi.</p>
+        <img src="images/founder.jpg" alt="Scarlet Buthelezi" class="founder-img">
+        <p><em>Personal Message:</em> YOU DESERVE TO SHINE, MY DARLINGS! Feel comfortable in your skin… Love is amongst us women.</p>
+
+        <h2>Store Details</h2>
+        <p>Our boutique is located in Johannesburg, South Africa. We offer in-store consultations and an online ordering platform for your convenience.</p>
     </section>
 
-    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort</p>
-          <address>
-            45 Braamfountain Street, Randburg | Email: Scarlet@RaimsyClothing.com | Phone:+27 887 589 212
+        <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort | All Rights Reserved.</p>
+        <address>
+            45 Braamfountain Street, Randburg<br>
+            Email: Scarlet@RaimsyClothing.com<br>
+            Phone: +27 887 589 212
         </address>
-        
-        <a href="Shop.html">
-           <button>
-            Shop Now
-           </button>
-        </a>
-
-
+        <a href="Shop.html"><button>Shop Now</button></a>
     </footer>
 </body>
 </html>
+
