--- a/blog.html
+++ b/blog.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scarlet Raimsy Clothing | Blog</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <h1>Scarlet Raimsy Clothing</h1>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About Us</a> |
-            <a href="services.html">Services</a> |
-            <a href="customization.html">Customization</a> |
-            <a href="blog.html">Blog</a> |
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="customization.html">Customization</a>
+            <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
     <!-- Blog Section -->
-    <section>
+    <section class="blog">
         <h2>Style Tips & Trends</h2>
         <article>
             <h3>Choosing the Right Fabric for Summer</h3>
@@ -31,24 +32,23 @@
             <p>Learn how to pair jewelry, belts, and shoes to enhance your unique design.</p>
         </article>
         <article>
-            <h3>Choosing clothes suitable for your body type</h3>
-            <p>Try to look at the shape of clothes and see if your body has the same shape. <br> Corresponding shapes will give you a perfect fit.</p>
+            <h3>Choosing Clothes Suitable for Your Body Type</h3>
+            <p>Look at the shape of clothes and see if it corresponds to your body shape. Matching shapes will give you a perfect fit.</p>
         </article>
     </section>
 
     <!-- Footer -->
     <footer>
-       <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort</p>
-          <address>
-            45 Braamfountain Street, Randburg | Email: Scarlet@RaimsyClothing.com | Phone:+27 887 589 212
+        <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort</p>
+        <address>
+            45 Braamfountain Street, Randburg<br>
+            Email: Scarlet@RaimsyClothing.com<br>
+            Phone: +27 887 589 212
         </address>
-        
         <a href="Shop.html">
-           <button>
-            Shop Now
-           </button>
-        </a> 
-
+            <button>Shop Now</button>
+        </a>
     </footer>
 </body>
 </html>
+
