--- a/customization.html
+++ b/customization.html
@@ -1,26 +1,27 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scarlet Raimsy Clothing | Customization</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <h1>Scarlet Raimsy Clothing</h1>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About Us</a> |
-            <a href="services.html">Services</a> |
-            <a href="customization.html">Customization</a> |
-            <a href="blog.html">Blog</a> |
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="customization.html">Customization</a>
+            <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
     <!-- Customization Section -->
-    <section>
+    <section class="customization">
         <h2>Customization Options</h2>
         <p>Choose your preferred:</p>
         <ul>
@@ -34,17 +35,15 @@
 
     <!-- Footer -->
     <footer>
-      <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort</p>
-          <address>
-            45 Braamfountain Street, Randburg | Email: Scarlet@RaimsyClothing.com | Phone:+27 887 589 212
+        <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort</p>
+        <address>
+            45 Braamfountain Street, Randburg<br>
+            Email: Scarlet@RaimsyClothing.com<br>
+            Phone: +27 887 589 212
         </address>
-        
         <a href="Shop.html">
-           <button>
-            Shop Now
-           </button>
+            <button>Shop Now</button>
         </a>
-
     </footer>
 </body>
 </html>
