--- a/index.html
+++ b/index.html
@@ -1,73 +1,55 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scarlet Raimsy Clothing | Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <h1>Scarlet Raimsy Clothing</h1>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About Us</a> |
-            <a href="services.html">Services</a> |
-            <a href="customization.html">Customization</a> |
-            <a href="blog.html">Blog</a> |
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="customization.html">Customization</a>
+            <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
     <!-- Hero Section -->
-    <section>
-        
+    <section class="hero">
         <h2>Welcome to Scarlet Raimsy Clothing</h2>
-        <p>Your Perfect fit, your style,  custom-made for every woman.</p>
-        <img src="hero image.jpg" alt="Scarlet Raimsy Custom Clothing" width="40%" lenth="40%">
+        <p>Your perfect fit, your style, custom-made for every woman.</p>
+        <img src="images/hero image.jpg" alt="Scarlet Raimsy Custom Clothing">
     </section>
 
-     <h2>Our designs</h2>
-     <p> Be ready to be amazed, we also offer our own design, but ofcourse they are tailored to your needs</p>
-     <br>
-     <img src="dress1.webp" width="10%" length="10%" <br> <img src="jacketdress.webp" width="10%" length="10%" <br> <img src="jumpsuit.webp" width="10%" length="10%"
- 
+    <!-- Our Designs Section -->
+    <section class="designs">
+        <h2>Our Designs</h2>
+        <p>Be ready to be amazed! We also offer our own designs, tailored to your needs.</p>
+        <div class="gallery">
+            <img src="images/dress1.webp" alt="Dress 1">
+            <img src="images/jacketdress.webp" alt="Jacket Dress">
+            <img src="images/jumpsuit.webp" alt="Jumpsuit">
+        </div>
+        <a href="more-designs.html">
+            <button>See More Designs</button>
+        </a>
+    </section>
 
-<!-- Add "More" button -->
-<a href="more-designs.html">
-    <button style="background-color: crimson; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
-        See More Designs
-    </button>
-</a>
-
-<br><br>
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort   All Rights Reserved.</p>
-
+        <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort | All Rights Reserved.</p>
         <address>
-        45 Braamfountain Street, Randburg  <br>
-        Email: Scarlet@RaimsyClothing.com  <br>
-        Phone:+27 887 589 212
+            45 Braamfountain Street, Randburg<br>
+            Email: Scarlet@RaimsyClothing.com<br>
+            Phone: +27 887 589 212
         </address>
-        
-        <a href="Shop.html">
-           <button>
-            Shop Now
-           </button>
-        </a>
-
-
+        <a href="Shop.html"><button>Shop Now</button></a>
     </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
