--- a/service.html
+++ b/service.html
@@ -4,45 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scarlet Raimsy Clothing | Services</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header -->
     <header>
         <h1>Scarlet Raimsy Clothing</h1>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About Us</a> |
-            <a href="services.html">Services</a> |
-            <a href="customization.html">Customization</a> |
-            <a href="blog.html">Blog</a> |
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="customization.html">Customization</a>
+            <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
-    <!-- Services Section -->
-    <section>
+    <section class="services">
         <h2>Our Services</h2>
+        <p>We offer a variety of services designed to help you look your best and feel confident in your custom clothing:</p>
         <ul>
-            <li>Custom Dressmaking</li>
-            <li>Alterations and Fittings</li>
-            <li>Personal Styling Consultations</li>
-            <li>Tailored Outfits for Special Occasions</li>
+            <li><strong>Custom Outfit Design:</strong> Tailored clothing to fit your body type and personal style.</li>
+            <li><strong>In-Store Consultations:</strong> Personalized fittings and advice from our fashion experts.</li>
+            <li><strong>Online Customization:</strong> Use our interactive tools to create your own designs from home.</li>
+            <li><strong>Special Orders & Embellishments:</strong> Add unique details like embroidery, beads, or sequins to make your outfit one-of-a-kind.</li>
+            <li><strong>Fashion Advice & Styling Tips:</strong> Guidance on choosing colors, fabrics, and accessories that suit you.</li>
         </ul>
+
+        <div class="gallery">
+            <img src="images/custome design.jpg" alt="Custom Outfit Design">
+            <img src="images/instore.jpg" alt="In-Store Consultation">
+            <img src="images/customization.jpg" alt="Online Customization">
+        </div>
     </section>
 
-    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort</p>
-          <address>
-            45 Braamfountain Street, Randburg | Email: Scarlet@RaimsyClothing.com | Phone:+27 887 589 212
+        <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort | All Rights Reserved.</p>
+        <address>
+            45 Braamfountain Street, Randburg<br>
+            Email: Scarlet@RaimsyClothing.com<br>
+            Phone: +27 887 589 212
         </address>
-        
-        <a href="Shop.html">
-           <button>
-            Shop Now
-           </button>
-        </a>
-
+        <a href="Shop.html"><button>Shop Now</button></a>
     </footer>
 </body>
 </html>
