--- a/contactus.html
+++ b/contactus.html
@@ -4,51 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scarlet Raimsy Clothing | Contact</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <h1>Scarlet Raimsy Clothing</h1>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About Us</a> |
-            <a href="services.html">Services</a> |
-            <a href="customization.html">Customization</a> |
-            <a href="blog.html">Blog</a> |
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="customization.html">Customization</a>
+            <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
     <!-- Contact Section -->
-    <section>
+    <section class="contact">
         <h2>Contact Us</h2>
-        <p>Email: Scarlet@RaimsyClothing.com </p>
-        <p>Phone: +27 887 589 212 </p>
+        <p>Email: Scarlet@RaimsyClothing.com</p>
+        <p>Phone: +27 887 589 212</p>
         <p>Address: 45 Braamfountain Street, Randburg, South Africa</p>
-        <p>Send us a message:</p>
+
         <form>
             <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name"><br>
+            <input type="text" id="name" name="name" placeholder="Enter your name" required><br>
+
             <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email"><br>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required><br>
+
             <label for="message">Message:</label><br>
-            <textarea id="message" name="message"></textarea><br><br>
+            <textarea id="message" name="message" placeholder="Your message here" required></textarea><br><br>
+
             <input type="submit" value="Send">
         </form>
     </section>
 
     <!-- Footer -->
     <footer>
-      <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort</p>
-          <address>
-            45 Braamfountain Street, Randburg | Email: Scarlet@RaimsyClothing.com | Phone:+27 887 589 212
+        <p>&copy; 2025 Scarlet Raimsy Clothing | Designed for style and comfort</p>
+        <address>
+            45 Braamfountain Street, Randburg<br>
+            Email: Scarlet@RaimsyClothing.com<br>
+            Phone: +27 887 589 212
         </address>
-        
         <a href="Shop.html">
-           <button>
-            Shop Now
-           </button>
-        </a>  
+            <button>Shop Now</button>
+        </a>
     </footer>
 </body>
 </html>
